--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # Compiled Files
 *.class
-src/
+bin/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
